[update]記事カードにバッチを追加

--- a/markdown/2021-01-01-sample3.md
+++ b/markdown/2021-01-01-sample3.md
@@ -4,7 +4,7 @@ title: サンプル記事
 created_at: 2021-01-01
 updated_at: 2021-01-01
 description: 概要3
-tags: sample, JavaScript
+tags: sample, sample2, sample2, sample4, sample5, sample6, sample7, sample8, sample9, sample10, JavaScript
 ---
 
 ここに本文
