[update]circleciについての下書き更新

--- a/draft/3-2021-01-21-circleci.md
+++ b/draft/3-2021-01-21-circleci.md
@@ -12,6 +12,38 @@ tags: CircleCI
 
 ## CircleCIとは
 
-## セットアップ
+## プロジェクトのセットアップ
+今回はNuxt.jsで作成したプロジェクトのコンポーネント単体テストをCircleCI上で実行することを目的として進めていきます。
+まずGitHubでリポジトリを作成、クローンしたのちにリポジトリのルートディレクトリに```app```というディレクトリを作成しておきましょう。
+次に```app```ディレクトリ内にNuxt.jsのプロジェクトを作成します。リポジトリのルートディレクトリで以下のコマンドを実行します。
+
+```shell
+yarn create nuxt-app app
+```
+
+テスト用にJestを使用するのでそこの選択忘れさえしなければ、基本的にEnter押し続けで大丈夫です。
+
+Nuxt.jsのプロジェクトの設定が完了したら、次にCircleCIの設定をしていきます。
+リポジトリのルートディレクトリに```.circleci```というディレクトリを作成します。
+さらにその中に```config.yml```というファイルを作成してください。これがCircleCI上でどのようなジョブを走らせるのか設定を追加していきます。
+
+現状では以下のディレクトリ構成となります。
+```
+root/
+├ app/
+    └ Nuxt.jsのプロジェクト
+├ .circleci/
+    └ config.yml
+```
+
+## CircleCIとの連携
+ローカルでの設定が一通り終わったら、一旦変更をpushしてリモートへ反映させておきましょう。
+それでは、ここからはGithubリポジトリとCircleCIを実際に連携させていきます。以下のurlにアクセスしてください。
+
+
+
+## テストコードの記述
+
+## 実行
 
 ## まとめ
