[update]circleciの記事下書きを編集

--- a/draft/3-2021-01-21-circleci.md
+++ b/draft/3-2021-01-21-circleci.md
@@ -21,6 +21,23 @@ tags: CircleCI
 yarn create nuxt-app app
 ```
 
+```shell
+...
+
+? Programming language:
+  JavaScript
+> TypeScript
+
+...
+
+? Testing framework:
+  None
+> Jest
+  AVA
+  WebdriverIO
+  Nightwatch
+```
+
 テスト用にJestを使用するのでそこの選択忘れさえしなければ、基本的にEnter押し続けで大丈夫です。
 
 Nuxt.jsのプロジェクトの設定が完了したら、次にCircleCIの設定をしていきます。
@@ -36,13 +53,119 @@ root/
     └ config.yml
 ```
 
+では、```config.yml```に以下のような設定を記載していきます。
+```yml
+version: 2
+jobs:
+  deploy-development:
+    docker:
+      - image: circleci/node:14.15.3
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - yarn-{{ checksum "app/package.json" }}
+      - run:
+          name: yarn install
+          working_directory: app
+          command: yarn install
+      - run:
+          name: test running
+          working_directory: app
+          command: yarn test
+  deploy-production:
+    docker:
+      - image: circleci/node:14.15.3
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - yarn-{{ checksum "app/package.json" }}
+      - run:
+          name: yarn install
+          command: yarn install
+      - run:
+          name: test running
+          working_directory: app
+          command: yarn test
+workflows:
+  version: 2
+  deploy:
+    jobs:
+      - deploy-development:
+          filters:
+            branches:
+              only:
+                - develop
+      - deploy-production:
+          filters:
+            branches:
+              only:
+                - main
+```
+
+## テストコード
+CircleCIとの連携を行う前にテストが通るか確認しておきましょう。
+テスティングフレームワークにJestを選択した場合、以下のようなLogoコンポーネントの存在をチェックするテストコードが自動で作成されます。
+
+```javascript
+import { mount } from '@vue/test-utils'
+import Logo from '@/components/Logo.vue'
+
+describe('Logo', () => {
+  test('is a Vue instance', () => {
+    const wrapper = mount(Logo)
+    expect(wrapper.vm).toBeTruthy()
+  })
+})
+
+```
+
+ではappディレクトリ内でテストを実行してみます。
+
+```shell
+$ yarn test
+yarn run v1.19.1
+$ jest
+ PASS  test/Logo.spec.js
+  Logo
+    √ is a Vue instance (11 ms)
+
+-----------|---------|----------|---------|---------|-------------------
+File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s
+-----------|---------|----------|---------|---------|-------------------
+All files  |       0 |      100 |     100 |       0 |
+ index.vue |       0 |      100 |     100 |       0 | 31
+-----------|---------|----------|---------|---------|-------------------
+Test Suites: 1 passed, 1 total
+Tests:       1 passed, 1 total
+Snapshots:   0 total
+Time:        7.361 s
+Ran all test suites.
+Done in 9.78s.
+```
+
+
+
 ## CircleCIとの連携
 ローカルでの設定が一通り終わったら、一旦変更をpushしてリモートへ反映させておきましょう。
 それでは、ここからはGithubリポジトリとCircleCIを実際に連携させていきます。以下のurlにアクセスしてください。
 
+https://circleci.com/
 
+Sign Upから自身のGitHubアカウントとの連携を行ってください。
+連携が完了すると、以下のようなdashboard画面へと遷移します。
 
-## テストコードの記述
+![circleci_1-min](https://user-images.githubusercontent.com/50108450/106350040-32582580-6316-11eb-8636-0cc73f6f7acb.png)
+
+左上の赤枠で囲ってあるProjectsタブへ移動しましょう。このタブではリポジトリが一覧化されています。
+
+![circleci_2-min](https://user-images.githubusercontent.com/50108450/106350611-c2e43500-6319-11eb-877f-deaf13c0afb4.png)
+
+連携させたいリポジトリの列の「Set Up Project」をクリックしましょう。
+すると以下の画面へと遷移します。
+画面上で記載のある通り、config.ymlを用意しなくてもCircleCIの編集画面から直接設定をすることも出来ます。
+しかし、今回は自前のconfig.ymlを用意しているので、「」をクリックしておきましょう。
 
 ## 実行
 
