[update]東海道ウォーキングの記事を修正

--- a/markdown/5-2021-04-05-tokaido-1.md
+++ b/markdown/5-2021-04-05-tokaido-1.md
@@ -15,7 +15,7 @@ tags: 旅
 そこで今回は三密に気を付けつつリフレッシュするべくして東海道を歩くことにしました。
 ウォーキングは三密どころか気を付ければほぼ人と接触する機会が無くなるため、感染対策をしつつ、リフレッシュする最適な手段です。
 
-一度に東海道全行程を歩き切る訳ではなく、複数日に分けて歩き切るというものです。
+一度に東海道全行程を歩き切る訳ではなく、複数日に分けて歩きます。
 スタートは日本橋、ゴールは京都にある三条大橋、分けて歩くにあたって1区間を1宿間としました。
 宿とは東海道沿いにある江戸時代までの宿場町のことを指します。京都～日本橋で53個あるため東海道53次と呼ばれています。
 
@@ -68,7 +68,7 @@ tags: 旅
 本陣跡も見れたので今日はひとまず帰ろうかと思いましたが、帰るために北品川駅へ向かっていたところ、品川神社の前を通ったのでこちらにも行ってみました。東京十社にも指定されている有名な神社のようです。
 
 <img src="https://user-images.githubusercontent.com/50108450/113579643-8d343300-965f-11eb-9bca-1c27dcf6c612.jpg" />
-<br>
+
 <img src="https://user-images.githubusercontent.com/50108450/113579640-8c030600-965f-11eb-8447-b789bcb355c3.jpg" />
 
 神社への参拝も済ませ、北品川駅より帰路につきました。
