--- a/markdown/8-2022-01-30-meta-ruby.md
+++ b/markdown/8-2022-01-30-meta-ruby.md
@@ -76,7 +76,7 @@ my_class = MyClass
 
 クラスはオブジェクトであり、クラス名は定数となる。
 
-Rubyの定数はネストできる。Rakeがいい例らしい。
+Rubyの定数はネストできる。
 
 この特性を利用して、定数をmodule内に入れ衝突を避ける技法は*ネームスペース*と呼ばれる。
 
